--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
   <ion-row>
     <ion-col size-xs="12" size-md="12" size-lg="8" style="margin: auto;">
       <ion-card class="ion-no-margin">
-        <ion-calendar></ion-calendar>
+        <ion-calendar [data]="datesConfig"></ion-calendar>
       </ion-card>
     </ion-col>
   </ion-row>
