--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,9 +9,16 @@
 <ion-content>
   <ion-row>
     <ion-col size-xs="12" size-md="12" size-lg="8" style="margin: auto;">
+      <h2>
+        ion2-calendar
+      </h2>
       <ion-card class="ion-no-margin">
         <ion-calendar [data]="datesConfig"></ion-calendar>
       </ion-card>
+
+      <h2>
+        Revamp Calendar
+      </h2>
     </ion-col>
   </ion-row>
 </ion-content>
