--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,7 +21,7 @@
       </h2>
 
       <ion-card class="ion-no-margin">
-        <custom-calendar></custom-calendar>
+        <custom-calendar [options]="opt"></custom-calendar>
       </ion-card>
     </ion-col>
   </ion-row>
