--- a/src/app/custom-calendar/calendar-days/calendar-days.component.html
+++ b/src/app/custom-calendar/calendar-days/calendar-days.component.html
@@ -22,12 +22,11 @@
   <ng-template #otherMode>
     <ng-container *ngFor="let day of selectedMonth.days; trackBy: trackByTime">
       <div *ngIf="day" class="days">
-        <button class="days-btn" [ngClass]="day.cssClass" type='button' [class.today]="day.isToday" (click)="onSelected(day)"
+        <button class="days-btn" [ngClass]="day.cssClass" type='button' [class.today]="day.today"
           [class.marked]="day.marked" [class.last-month-day]="day.isLastMonth" [class.next-month-day]="day.isNextMonth"
-          [class.on-selected]="isSelected(day.time)" [disabled]="day.disable"
-          [attr.aria-label]="getDayLabel(day) | date:'MMMM dd, yyyy'">
+          [class.on-selected]="isSelected(day.timestamp)" [disabled]="day.disabled"
+          [attr.aria-label]="getDayLabel(day) | date:'MMMM dd, yyyy'" (click)="onSelected(day)">
           <p>{{ day.title }}</p>
-          <!-- <small *ngIf="day.subTitle">{{ day?.subTitle }}</small> -->
         </button>
       </div>
     </ng-container>
