--- a/src/app/custom-calendar/calendar-days/calendar-days.component.html
+++ b/src/app/custom-calendar/calendar-days/calendar-days.component.html
@@ -1,27 +1,23 @@
 <div [ngClass]="color">
   <ng-template [ngIf]="rangeMode" [ngIfElse]="otherMode">
-    <div class="days-box">
-      <ng-template ngFor let-day [ngForOf]="selectedMonth.days" [ngForTrackBy]="trackByTime">
-        <div class="days" [class.startSelection]="isStartSelection(day!)" [class.endSelection]="isEndSelection(day!)"
-          [class.is-first-wrap]="day?.isFirst" [class.is-last-wrap]="day?.isLast" [class.between]="isBetween(day!)">
-          <ng-container *ngIf="day">
-            <button type='button' [class]="'days-btn ' + day.cssClass" [class.today]="day.isToday"
-              (click)="onSelected(day)" [class.marked]="day.marked" [class.last-month-day]="day.isLastMonth"
-              [class.next-month-day]="day.isNextMonth" [class.is-first]="day.isFirst" [class.is-last]="day.isLast"
-              [class.on-selected]="isSelected(day.time)" [disabled]="day.disable">
-              <p>{{ day.title }}</p>
-              <small *ngIf="day.subTitle">{{ day?.subTitle }}</small>
-            </button>
-          </ng-container>
-
-        </div>
-      </ng-template>
-    </div>
+    <ng-container *ngFor="let day of selectedMonth.days; trackBy: trackByTime">
+      <div *ngIf="day" class="days" [class.start-selection]="isStartSelection(day)"
+        [class.end-selection]="isEndSelection(day)" [class.between]="isBetween(day)">
+        <!-- Day Button -->
+        <button class="days-btn" [ngClass]="day.cssClass" [class.today]="day.isToday" (click)="onSelected(day)"
+          [class.marked]="day.marked" [class.last-month-day]="day.isLastMonth" [class.next-month-day]="day.isNextMonth"
+          [class.is-first]="day.isFirst" [class.is-last]="day.isLast" [class.on-selected]="isSelected(day.timestamp)"
+          [disabled]="day.disable">
+          <p>{{ day.title }}</p>
+        </button>
+      </div>
+    </ng-container>
   </ng-template>
 
   <ng-template #otherMode>
     <ng-container *ngFor="let day of selectedMonth.days; trackBy: trackByTime">
       <div *ngIf="day" class="days">
+        <!-- Day Button -->
         <button class="days-btn" [ngClass]="day.cssClass" type='button' [class.today]="day.today"
           [class.marked]="day.marked" [class.last-month-day]="day.isLastMonth" [class.next-month-day]="day.isNextMonth"
           [class.on-selected]="isSelected(day.timestamp)" [disabled]="day.disabled"
